FIX: Fix missing margin on flipping card css

--- a/[0] Coding/Home Page/homePage.css
+++ b/[0] Coding/Home Page/homePage.css
@@ -412,6 +412,7 @@ img.card-picture {
 h3.card-title {
 	text-align: left;
 	margin-left: 25px;
+	margin-right: 25px;
 	color: #18194f;
 }
 
@@ -419,6 +420,7 @@ h5.project-title {
 	font-size: 13px;
     text-align: left;
     margin-left: 25px;
+    margin-right: 25px;
     font-style: italic;
     color: rgb(97, 97, 97);
 }
